<resources>
    <string name="app_name">BWA Mov App</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="presale">Pre Sale</string>
    <string name="presale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="memulai">MEMULAI</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, \nFaradilah Putri</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="now_playing2">NOW PLAYING</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="pilih_bangku2">Pilih Bangku</string>
    <string name="layar" />
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">"BELI TIKET "</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">BATALKAN</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="who_player">Who\'s Player</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="home">HOME</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="happy_watching_desc">Tiket telah berhasil dibeli dan selamat menikmati film</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_rq">Scan QR</string>
    <string name="quick_print">Quick Print</string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
</resources>